# ai-desktop-voice-assist

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
benchmarks/scripts/: benchmark_models .py  benchmark_trancription.py
src/voice_assist/: main.py
src/voice_assist/llm/: ai_agent.py  llm_process.py  llm_stream.py
src/voice_assist/pipelines/: multiprocess_pipeline.py  voice_assistant_pipeline.py
src/voice_assist/tools/: tools.py
src/voice_assist/transacription/: auto_spliter.py  config.py  transcriber.py
src/voice_assist/utils/: context_manager.py
src/voice_assist/voice/: voice_process.py  voice_stream.py  voice_synth.py
